# ArcticOS

./: .gitignore  CODEBASE_GUIDE.md  Cargo.toml  LICENSE  MR.md  README.md  SUMMARY.md  run_everything_progress.sh
agentic/: Cargo.toml  nightly_regression.sh
agentic/src/: main.rs
artifacts/: agentic_runs.db  autonomous_report.json  autonomous_report.md  baseline.json  best_candidate.json  candidate.json
control-plane/: Cargo.toml
control-plane/src/: main.rs
docs/: ARCHITECTURE.md  GPU_CONCEPTS.md  QUICKSTART.md
scheduler/: Cargo.toml
scheduler/src/: cpu_executor.rs  executor.rs  fifo.rs  lib.rs  metrics.rs  priority.rs  scheduler.rs  task.rs
scheduler/src/gpu/: context.rs  device.rs  executor.rs  mod.rs
scheduler/src/gpu/kernels/: simulated_task.cu  simulated_task.ptx
scheduler/tests/: integration_tests.rs
