[package]
name = "articos-agentic"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "articos-agentic"
path = "src/main.rs"

[dependencies]
articos-scheduler = { path = "../scheduler" }
serde.workspace = true
serde_json.workspace = true
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
