[package]
name = "articos-control-plane"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "articos"
path = "src/main.rs"

[dependencies]
articos-scheduler = { path = "../scheduler" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
